# mariadbcli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: main.rs
src/api/: mod.rs  models.rs  requests.rs
src/clicommands/: clicommands.rs  clicommands.yml  mod.rs
